# janim-url-assets

./: .readthedocs.yaml  README.md  README_zh_CN.md  flake.nix  pyproject.toml
docs/source/: autodoc.py  conf.py  index.rst
docs/source/janim_url_assets/: api.rst  imports.rst  items.rst  modules.rst  plugin.rst  utils.rst
docs/source/locales/en/LC_MESSAGES/: index.mo  index.po  janim_url_assets.mo  janim_url_assets.po
janim_iconify/: __init__.py  plugin.py
janim_url_assets/: __init__.py  api.py  examples.py  imports.py  items.py  plugin.py  utils.py
