[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "janim-url-assets"
readme = "README.md"
dynamic = ["version", "description"]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python"
]
requires-python = ">=3.12"
dependencies = [
    "janim",
]

[dependency-groups]
dev = [
    "janim[gui]",
]

[project.entry-points."janim.plugins"]
janim-url-assets = "janim_url_assets.plugin"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "single"

