[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "janim-url-assets"
readme = "README.md"
dynamic = ["version", "description"]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python"
]
requires-python = ">=3.12"
dependencies = [
    "janim",
]

[dependency-groups]
dev = [
    "furo>=2025.12.19",
    "janim[gui]",
    "sphinx>=8.2.3",
    "sphinx-intl>=2.3.2",
]

[project.entry-points."janim.plugins"]
janim-url-assets = "janim_url_assets.plugin"

[tool.flit.sdist]
exclude = [
    "docs",
    ".readthedocs.yaml",
    "flake.nix",
    "flake.lock",
    "uv.lock",
    ".gitignore"
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "single"

